--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
                 "--csv_classes", "vegnet_annotations/labels.csv",
                 "--csv_train", "vegnet_annotations/vegnet-annots.csv",
                 "--img_dir", "vegnet_images",
-                "--depth", "18",
+                "--model", "mobilenetv2",
             ]
         }
     ]
