--- a/yolo/vegnet_yolo.yaml
+++ b/yolo/vegnet_yolo.yaml
@@ -2,7 +2,7 @@
 ## 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
 
 
-path: ../datasets/vegnet  # dataset root dir
+path: /home/s/repo/vegnet-disease-det/datasets/vegnet  # dataset root dir
 train: images/train  # train images (relative to 'path') 128 images
 val: images/val # val images (relative to 'path') 128 images
 # test:  # test images (optional)
